--- a/pom.xml
+++ b/pom.xml
@@ -70,8 +70,14 @@
       <artifactId>mysql-connector-java</artifactId>
       <scope>runtime</scope>
     </dependency>
+      <dependency>
+          <groupId>org.xerial</groupId>
+          <artifactId>sqlite-jdbc</artifactId>
+          <version>3.25.2</version>
+      </dependency>
 
-    <!-- caching -->
+
+      <!-- caching -->
     <dependency>
       <groupId>javax.cache</groupId>
       <artifactId>cache-api</artifactId>
