[#20] Added findAll method for all repository tables

--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,13 @@
   </properties>
 
   <dependencies>
+      <!-- https://mvnrepository.com/artifact/commons-codec/commons-codec -->
+      <dependency>
+          <groupId>commons-codec</groupId>
+          <artifactId>commons-codec</artifactId>
+          <version>1.12</version>
+      </dependency>
+
     <!-- Spring and Spring Boot dependencies -->
     <dependency>
       <groupId>org.springframework.boot</groupId>
