--- a/pom.xml
+++ b/pom.xml
@@ -74,7 +74,15 @@
           <artifactId>spring-boot-starter-log4j2</artifactId>
       </dependency>
 
-    <!-- Databases - Uses HSQL by default -->
+      <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-csv -->
+      <dependency>
+          <groupId>org.apache.commons</groupId>
+          <artifactId>commons-csv</artifactId>
+          <version>1.6</version>
+      </dependency>
+
+
+      <!-- Databases - Uses HSQL by default -->
     <dependency>
       <groupId>org.hsqldb</groupId>
       <artifactId>hsqldb</artifactId>
