[#29] Added dependency for Mockneat

--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,12 @@
           <artifactId>spring-boot-starter-log4j2</artifactId>
       </dependency>
 
+      <dependency>
+          <groupId>net.andreinc.mockneat</groupId>
+          <artifactId>mockneat</artifactId>
+          <version>0.3.6</version>
+      </dependency>
+
       <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-csv -->
       <dependency>
           <groupId>org.apache.commons</groupId>
@@ -258,6 +264,10 @@
         <enabled>false</enabled>
       </snapshots>
     </repository>
+      <repository>
+          <id>jcenter</id>
+          <url>https://jcenter.bintray.com/</url>
+      </repository>
   </repositories>
 
   <pluginRepositories>
